--- a/web-crawler/.project
+++ b/web-crawler/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>web-crawler-lab</name>
+	<name>web-crawler</name>
 	<comment></comment>
 	<projects>
 	</projects>
