--- a/web-crawler/pom.xml
+++ b/web-crawler/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<!-- google gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 
 		<!-- MongDB -->
 		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
