--- a/web-project/pom.xml
+++ b/web-project/pom.xml
@@ -115,6 +115,12 @@
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.13</version>
 		</dependency>
+		<!-- google gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 		
 		<!-- Manifest reader -->
 		<dependency>
