--- a/web-project/src/main/webapp/WEB-INF/web.xml
+++ b/web-project/src/main/webapp/WEB-INF/web.xml
@@ -27,25 +27,25 @@
 		<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
 	</filter>
 	<context-param>
-        <param-name>primefaces.THEME</param-name>
-        <param-value>olympia-#{guestPreferences.theme}</param-value>
-    </context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>olympia-#{guestPreferences.theme}</param-value>
+	</context-param>
 	<context-param>
 		<param-name>primefaces.FONT_AWESOME</param-name>
 		<param-value>true</param-value>
 	</context-param>
 	<context-param>
-        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-        <param-value>/WEB-INF/primefaces-olympia.taglib.xml</param-value>
-    </context-param>
-    <filter>
-        <filter-name>Character Encoding Filter</filter-name>
-        <filter-class>org.primefaces.olympia.filter.CharacterEncodingFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>Character Encoding Filter</filter-name>
-        <servlet-name>Faces Servlet</servlet-name>
-    </filter-mapping>
+		<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+		<param-value>/WEB-INF/primefaces-olympia.taglib.xml</param-value>
+	</context-param>
+	<filter>
+		<filter-name>Character Encoding Filter</filter-name>
+		<filter-class>org.primefaces.olympia.filter.CharacterEncodingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>Character Encoding Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
 	<!-- <filter> <filter-name>PrimeFaces FileUpload Filter</filter-name> <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class> 
 		<init-param> <param-name>thresholdSize</param-name> <param-value>51200</param-value> 
 		</init-param> <init-param> <param-name>uploadDirectory</param-name> <param-value>/tmp</param-value> 
@@ -129,7 +129,7 @@
 		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
 		<location>/login.jsf</location>
 	</error-page>
-	
+
 	<!-- Listener do Jboss Weld -->
 	<listener>
 		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
@@ -138,6 +138,35 @@
 		<resource-env-ref-name>BeanManager</resource-env-ref-name>
 		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
 	</resource-env-ref>
+
+	<!-- CACHE CONTROL -->
+	<filter>
+		<filter-name>ExpiresFilter</filter-name>
+		<filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
+		<init-param>
+			<param-name>ExpiresByType image</param-name>
+			<param-value>access plus 10 days</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ExpiresByType text/css</param-name>
+			<param-value>access plus 10 hours</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ExpiresByType application/javascript</param-name>
+			<param-value>access plus 10 minutes</param-value>
+		</init-param>
+		<!-- Let everything else expire immediately -->
+		<init-param>
+			<param-name>ExpiresDefault</param-name>
+			<param-value>access plus 0 seconds</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>ExpiresFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+	</filter-mapping>
 
 	<session-config>
 		<session-timeout>30</session-timeout>
